# FeDa4Fair

./: .gitignore  FairFederatedDataset.py  README.md  comparision_fairness_distribution.py  dataimport.py  evaluation.py  fairness_computation.py  fairnessmodifications.py  main.py  plots.py  pyproject.toml  utils.py
src/FeDa4Fair/: FairFederatedDataset.py  __init__.py  creating_datasets.py  datasheet_template.md  evaluation.py  example.ipynb  example_utils.py  fairness_computation.py  main.py  plots.py  to_datasheet.py
src/FeDa4Fair/data/cross_device_attribute_final/: AZ_0.csv  CO_0.csv  CT_2.csv  CT_5.csv  HI_0.csv  IA_0.csv  IA_1.csv  ID_0.csv  IL_2.csv  IL_3.csv  IN_0.csv  KS_2.csv  KS_4.csv  LA_2.csv  MA_4.csv  MI_2.csv  MN_0.csv  MN_3.csv  MN_4.csv  MO_4.csv  NC_1.csv  ND_1.csv  ND_4.csv  NE_4.csv  NE_5.csv  NH_0.csv  NH_1.csv  NH_4.csv  NH_5.csv  NJ_1.csv  NJ_3.csv  NJ_4.csv  NM_5.csv  NV_0.csv  NV_1.csv  NY_2.csv  NY_3.csv  NY_5.csv  OH_2.csv  OK_0.csv  (+25 more)
src/FeDa4Fair/data/cross_device_value_final/: AK_1.csv  AK_2.csv  AR_0.csv  AR_2.csv  AZ_0.csv  AZ_2.csv  CO_2.csv  DE_0.csv  FL_0.csv  GA_0.csv  GA_1.csv  HI_0.csv  HI_2.csv  ID_0.csv  ID_1.csv  IL_0.csv  IL_1.csv  KS_0.csv  KY_0.csv  MD_0.csv  MD_1.csv  (+34 more)
src/fairfl_data/: FairFederatedDataset.py  __init__.py  comparision_count.py  comparision_fairness_distribution.py  creating_datasets.py  datasheet_template.md  evaluation.py  example.ipynb  example_utils.py  fairness_computation.py  main.py  plots.py  to_datasheet.py  utils.py
src/fairfl_data/FL/: pre_processing.ipynb
src/fairfl_data/fl/: README.md  pyproject.toml
src/fairfl_data/plots/: plots.ipynb
(+247 files in other folders)
