[project]
name = "fairfl-data"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10, <3.13"
dependencies = [
    "datasets>=3.1.0",
    "fairlearn>=0.12.0",
    "flwr[simulation]>=1.18.0",
    "flwr-datasets>=0.5.0",
    "folktables>=0.0.12",
    "numpy>=2.2.4",
    "pandas>=2.2.3",
    "pip>=25.1.1",
    "ruff>=0.11.2",
    "torch>=2.7.0",
    "torchvision>=0.22.0",
    "xgboost>=3.0.0",
]

#[project.scripts]
#fairfl-data = "fairfl_data:main"

#[build-system]
#requires = ["hatchling"]
#build-backend = "hatchling.build"

[tool.ruff]
line-length = 120
select = [
    "ALL", # include all the rules, including new ones
]

ignore = [
    #### modules
    "ANN", # flake8-annotations
    "COM", # flake8-commas
    "C90", # mccabe complexity
    "DJ",  # django
    "EXE", # flake8-executable
    "T10", # debugger
    "TID", # flake8-tidy-imports
    "E501",  # line too long, handled by black
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
    "W191", # indentation contains tabs
    #### specific rules
    "D100",   # ignore missing docs
    "D101",
    "D102",
    "D103",
    "D104",
    "D105",
    "D106",
    "D107",
    "D200",
    "D205",
    "D212",
    "D400",
    "D401",
    "D415",
    "E402",   # false positives for local imports
    "E501",   # line too long
    "TRY003", # external messages in exceptions are too verbose
    "TD002",
    "TD003",
    "FIX002", # too verbose descriptions of todos
]

